--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,8 @@
 {
-  "printWidth": 80,
-  "useTabs": false,
-  "semi": true,
-  "singleQuote": true,
-  "trailingComma": "es5",
-  "bracketSpacing": true,
-  "arrowParens": "avoid",
-  "proseWrap": "always"
+    "singleQuote": true,
+    "jsxSingleQuote": true,
+    "arrowParens": "always",
+    "max-len": ["error", 140, 2],
+    "tabWidth": 3,
+    "useTabs": false
 }
